--- a/_posts/2015-05-29-infoeducatie-2015.md
+++ b/_posts/2015-05-29-infoeducatie-2015.md
@@ -7,6 +7,9 @@ custom_link: http://gazeta.info.ro/infoeducatie-2015/
 categories: romanian best
 tags:
 - contest
+image:
+  src: /assets/sky-galaciuc.jpg
+  alt: cerul in galaciuc
 ---
 
 Off goes this year's edition. I wrote more thoughts on [Gazeta de
