--- a/_posts/2015-05-29-infoeducatie-2015.md
+++ b/_posts/2015-05-29-infoeducatie-2015.md
@@ -3,7 +3,7 @@ layout: post
 title: InfoEducație 2015
 date: '2015-08-13T00:34:00.000+02:00'
 author: Alex Palcuie
-custom_link: http://gazeta.info.ro/infoeducatie-2015/
+seo_url: http://gazeta.info.ro/infoeducatie-2015/
 categories: romanian best
 tags:
 - contest
