Show more words on the front page

--- a/_posts/2015-05-29-infoeducatie-2015.md
+++ b/_posts/2015-05-29-infoeducatie-2015.md
@@ -12,12 +12,7 @@ image:
   alt: cerul in galaciuc
 ---
 
-Off goes this year's edition. I wrote more thoughts on [Gazeta de
-Informatică][0]. There were 132 participants with 117 projects in the camp. You
-can check out the [results][1]. We built from scratch a [new website][2] in
-Rails and React this year. We had 17 [presentations][3] and workshops for the
-students. I want to thank all the ther 4 core members in alphabetical order:
-Alex Coman, Bogdan Gâza, Robert Dolca and Vlad Temian for doing an awesome job.
+Off goes this year's edition. I wrote more thoughts on [Gazeta de Informatică][0]. There were 132 participants with 117 projects in the camp. You can check out the [results][1]. We built from scratch a [new website][2] in Rails and React this year. We had 17 [presentations][3] and workshops for the students. I want to thank all the ther 4 core members in alphabetical order: Alex Coman, Bogdan Gâza, Robert Dolca and Vlad Temian for doing an awesome job.
 
 [0]: http://gazeta.info.ro/infoeducatie-2015/
 [1]: https://infoeducatie.ro/rezultate
